--- a/src/Pages/mymoves.css
+++ b/src/Pages/mymoves.css
@@ -39,7 +39,7 @@
 }
 .buttons > button {
   cursor: pointer;
-  padding: 10px 10px;
+  padding: 5px 20px;
   border-radius: 5px;
 }
 .buttons > button:first-child {
@@ -53,9 +53,6 @@
   color: white;
 }
 
-/* Media Queries for responsiveness */
-
-/* Tablets and smaller devices */
 @media (max-width: 768px) {
   .from_address, .to_address, .request {
     width: 100%;
@@ -72,7 +69,9 @@
 
   .icon_text {
     width: 100%;
-    justify-content: space-between;
+    justify-content: flex-start;
+    gap: 30px;
+    margin-bottom: 10px;
   }
 
   .buttons {
