--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,44 @@
   box-sizing: border-box;
   max-width: 1440px;
 }
+.app {
+  display: flex;
+  height: 100vh;
+  overflow: hidden;
+}
 
+.navbar {
+  display: flex;
+  flex-direction: column;
+  width: 18%;
+  gap: 20px;
+  font-size: 1.5rem;
+  font-weight: bold;
+  padding: 20px;
+  height: 100%;
+  /* border: 1px solid red; */
+  box-sizing: border-box;
+}
+
+.active {
+  text-decoration: none;
+  /* border-left: 5px solid red; */
+  padding-left: 5px;
+}
+
+.default {
+  text-decoration: none;
+}
+
+.rightside {
+  flex: 1;
+  height: 100%;
+  overflow-y: auto;
+  padding: 20px;
+  box-sizing: border-box;
+}
+
+/* 
 .app {
   display: flex;
 }
@@ -39,4 +76,4 @@
 
 input[type="checkbox"] {
   accent-color: red;
-}
+} */
