--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,97 @@
-#root {
+/* src/App.css */
+.App {
+  display: flex;
+}
+
+.content {
+  margin-left: 250px;
+  padding: 20px;
+  transition: margin-left 0.3s;
+}
+
+@media (max-width: 767px) {
+  .content {
+    margin-left: 0;
+  }
+
+  .sidebar.open + .content {
+    margin-left: 250px;
+  }
+}
+
+
+
+/* #root {
+  margin: auto;
+  padding: 0;
+  box-sizing: border-box;
+  max-width: 1440px;
+}
+
+.app {
+  display: flex;
+  height: 100vh;
+  overflow: hidden;
+}
+
+.navbar {
+  display: flex;
+  flex-direction: column;
+  width: 18%;
+  gap: 20px;
+  font-size: 1.5rem;
+  font-weight: bold;
+  padding: 20px;
+  height: 100%;
+  box-sizing: border-box;
+  transition: transform 0.3s ease;
+}
+
+.navbar.hidden {
+  transform: translateX(-100%);
+}
+
+.hamburger {
+  display: none;
+  font-size: 2rem;
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  cursor: pointer;
+}
+
+.rightside {
+  flex: 1;
+  height: 100%;
+  overflow-y: auto;
+  padding: 20px;
+  box-sizing: border-box;
+}
+
+@media (max-width: 768px) {
+  .navbar {
+    width: 70%;
+    position: fixed;
+    z-index: 1000;
+    background: #fff;
+    height: 100%;
+    transform: translateX(-100%);
+  }
+  
+  .hamburger {
+    display: block;
+  }
+  
+  .rightside {
+    padding: 20px 10px;
+  }
+} */
+
+
+
+
+
+/* #root {
   margin: auto;
   padding: 0;
   box-sizing: border-box;
@@ -19,13 +112,11 @@
   font-weight: bold;
   padding: 20px;
   height: 100%;
-  /* border: 1px solid red; */
   box-sizing: border-box;
 }
 
 .active {
   text-decoration: none;
-  /* border-left: 5px solid red; */
   padding-left: 5px;
 }
 
@@ -39,41 +130,4 @@
   overflow-y: auto;
   padding: 20px;
   box-sizing: border-box;
-}
-
-/* 
-.app {
-  display: flex;
-}
-
-.sidebar {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 20%;
-  height: 97.2vh;
-  padding: 10px;
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-  flex: 1;
-}
-
-.content {
-  margin-left: 20%;
-  padding: 10px;
-  height: 95vh;
-  overflow-y: auto;
-  -ms-overflow-style: none;
-  scrollbar-width: none;
-  flex: 5;
-}
-
-.content::-webkit-scrollbar {
-  display: none;
-}
-
-input[type="checkbox"] {
-  accent-color: red;
 } */
